group by function and aggregate

--- a/StockEDA.ipynb
+++ b/StockEDA.ipynb
@@ -14,6 +14,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "from IPython.display import display\n",
     "\n",
     "\n",
     "\n"
@@ -1157,16 +1158,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "7a7bdb6a",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2840 entries, 0 to 2839\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column     Non-Null Count  Dtype         \n",
+      "---  ------     --------------  -----         \n",
+      " 0   Id         2840 non-null   int64         \n",
+      " 1   Date       2840 non-null   datetime64[ns]\n",
+      " 2   High       2840 non-null   float64       \n",
+      " 3   Low        2840 non-null   float64       \n",
+      " 4   Open       2840 non-null   float64       \n",
+      " 5   Close      2840 non-null   float64       \n",
+      " 6   Volume     2840 non-null   int64         \n",
+      " 7   Adj Close  2840 non-null   float64       \n",
+      " 8   Name       2840 non-null   object        \n",
+      "dtypes: datetime64[ns](1), float64(5), int64(2), object(1)\n",
+      "memory usage: 188.7+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_newcopy.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0faf1d73",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2840 entries, 0 to 2839\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column     Non-Null Count  Dtype         \n",
+      "---  ------     --------------  -----         \n",
+      " 0   Id         2840 non-null   int64         \n",
+      " 1   Date       2840 non-null   datetime64[ns]\n",
+      " 2   High       2840 non-null   float64       \n",
+      " 3   Low        2840 non-null   float64       \n",
+      " 4   Open       2840 non-null   float64       \n",
+      " 5   Close      2840 non-null   float64       \n",
+      " 6   Volume     2840 non-null   int64         \n",
+      " 7   Adj Close  2840 non-null   float64       \n",
+      " 8   Name       2840 non-null   object        \n",
+      " 9   year       2840 non-null   int64         \n",
+      " 10  month      2840 non-null   int64         \n",
+      "dtypes: datetime64[ns](1), float64(5), int64(4), object(1)\n",
+      "memory usage: 233.0+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "#efficient way to extract year from string format date\n",
+    "\n",
+    "df_newcopy['year'] = pd.DatetimeIndex(df_newcopy['Date']).year\n",
+    "df_newcopy['month'] = pd.DatetimeIndex(df_newcopy['Date']).month\n",
+    "\n",
+    "df_newcopy.head()\n",
+    "\n",
+    "\n",
+    "\n",
+    "#if the date format comes in datetime, we can also extract the day/month/year using the to_period function\n",
+    "#where 'D', 'M', 'Y' are inputs\n",
+    "#df_newcopy[''] = pd.to_datetime(df_newcopy['Date']).dt.to_period('M')\n",
+    "#df_newcopy.head()\n",
+    "print(df_newcopy.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "9b8d3711",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#multiple columns group by cube and aggregate and round up \n",
+    "\n",
+    "grouped_multiple = df_newcopy.groupby(['year','Name','month']).agg({'Open':['min','max'],'Close':['min','max'],'Volume':['min','max']}).round(decimals=2)\n",
+    "grouped_multiple.columns = ['open_min','open_max','close_min','close_max','vol_min','vol_max']\n",
+    "grouped_multiple = grouped_multiple.reset_index()\n",
+    "grouped_multiple\n",
+    "\n",
+    "#export to excel \n",
+    "grouped_multiple.to_excel(\"D:\\project\\stocksanalysis.xlsx\", sheet_name = \"Sheet1\")\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0faf1d73",
+   "id": "667e3a69",
    "metadata": {},
    "outputs": [],
    "source": []
